# chaos-language-algorithm

./: AUTOMATION_STATUS.md  README.md  pyproject.toml  sitecustomize.py
chaoslang/: __init__.py
docs/: cla_experiments_comprehensive_20260715.tex  cla_python_library_interface_design.tex  cla_research_paper.tex
experiments/logistic-m1-baseline/: RUN.md
experiments/lorenz63-m1-baseline/: RUN.md
experiments/lorenz96-dim12/: RUN.md
experiments/lorenz96-dim16/: RUN.md
experiments/lorenz96-dim20/: RUN.md
experiments/lorenz96-dim24/: RUN.md
experiments/lorenz96-dim8/: RUN.md
experiments/lorenz96-m1-baseline/: RUN.md
experiments/mackey-glass-m1-baseline/: RUN.md
experiments/rossler-m1-baseline/: RUN.md
src/chaoslang/: __init__.py  api.py  categorization.py  deeptime_backend.py  embedding.py  evaluation.py  mining.py  persistence.py  scoring.py  stores.py  symbolization.py  trie_miner.py
src/chaoslang/benchmarks/: __init__.py  attractors.py  m1_controls.py  parametric_sweep.py  phase1_lorenz63.py  phase1_sweep.py  rank_conditioned_lorenz63.py
src/chaoslang/categorization/: __init__.py  context.py  js.py  js_inducer.py
src/chaoslang/core/: edits.py  types.py
tests/: __init__.py  test_chunk_mvp.py  test_core.py  test_fixed_partition.py  test_hd_embedding.py  test_js_clustering.py  test_js_integration.py  test_m1_controls.py  test_mackey_glass_lorenz96.py  test_nested_prune.py  test_parametric_sweep.py  test_persistence.py  test_phase1_lorenz63.py  test_phase1_sweep.py  test_rank_conditioned_lorenz63.py  test_symbolic_mvp.py  test_trie_miner.py
(+6 files in other folders)
